add: personal info management views
